apps/bytestash/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: bytestash
  namespace: bytestash
  labels:
    app: bytestash
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: bytestash
  template:
    metadata:
      labels:
        app: bytestash
    spec:
      containers:
        - name: bytestash
          image: ghcr.io/jordan-dalby/bytestash:1.5.12
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 5000
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 20
            periodSeconds: 20
          resources:
            requests:
              cpu: 50m
              memory: 128Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: data
              mountPath: /data/snippets
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: bytestash-data
