apps/bytestash/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: bytestash
  namespace: bytestash
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`bytestash.stadthagen.dev`)
      kind: Rule
      services:
        - name: bytestash
          port: 5000
  tls:
    secretName: bytestash-tls
